[gd_scene load_steps=10 format=3 uid="uid://dmw1uiy11n781"]

[ext_resource type="Script" path="res://cenas/slime/slime.gd" id="1_ae4ab"]
[ext_resource type="Texture2D" uid="uid://dstkm0jwnpx6j" path="res://characters/slime.png" id="1_o73jy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3wan"]
radius = 6.0

[sub_resource type="Animation" id="Animation_a1e2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k6gpr"]
resource_name = "andando"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_e7bhs"]
resource_name = "morte"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_x43wq"]
resource_name = "parado"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nu5v"]
_data = {
"RESET": SubResource("Animation_a1e2i"),
"andando": SubResource("Animation_k6gpr"),
"morte": SubResource("Animation_e7bhs"),
"parado": SubResource("Animation_x43wq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pql2a"]
radius = 100.0

[node name="Slime" type="CharacterBody2D" groups=["inimigo"]]
script = ExtResource("1_ae4ab")

[node name="Textura" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("1_o73jy")
hframes = 7
vframes = 5

[node name="Colisao" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_b3wan")

[node name="Animacao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7nu5v")
}

[node name="AreaDeteccao" type="Area2D" parent="."]
position = Vector2(0, -5)

[node name="Colisao" type="CollisionShape2D" parent="AreaDeteccao"]
shape = SubResource("CircleShape2D_pql2a")

[node name="BarraVida" type="ProgressBar" parent="."]
modulate = Color(1, 0.235294, 0.196078, 1)
offset_left = -7.0
offset_top = 1.0
offset_right = 105.0
offset_bottom = 28.0
scale = Vector2(0.125, 0.125)
max_value = 80.0
show_percentage = false

[connection signal="animation_finished" from="Animacao" to="." method="_ao_terminar_animacao"]
[connection signal="body_entered" from="AreaDeteccao" to="." method="_ao_entrar_na_area_deteccao"]
[connection signal="body_exited" from="AreaDeteccao" to="." method="_ao_sair_na_area_deteccao"]
